--- a/3 Hypertension/Keras-MLP-Hypertension.ipynb
+++ b/3 Hypertension/Keras-MLP-Hypertension.ipynb
@@ -464,7 +464,7 @@
     "    classifier.fit(train_X, train_Y, batch_size=32, epochs= 15)\n",
     "\n",
     "    import pickle\n",
-    "    filename = 'Hypertension MLP.sav'\n",
+    "    filename = 'Data\\Hypertension MLP.sav'\n",
     "    pickle.dump(classifier, open(filename, 'wb'))\n",
     "\n",
     "    eval_model = classifier.evaluate(valid_X, valid_Y)\n",
